--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "bootstrap": "^5.3.3",
     "line-awesome": "^1.3.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "remixicon": "^4.3.0"
   },
   "devDependencies": {
