--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.17.0",
     "bootstrap": "^5.3.3",
     "line-awesome": "^1.3.0",
     "next": "14.2.5",
